Fixed some tests to fit interface